# gameour

./: CMakeLists.txt  main.cpp
build-ascii/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake
build-game/: CMakeCache.txt
include/: Animation.hpp  AssetStore.hpp  Bullet.hpp  Enemy.hpp  Entity.hpp  Game.hpp  Platform.hpp  Player.hpp
src/: Animation.cpp  AssetStore.cpp  Bullet.cpp  Enemy.cpp  Entity.cpp  Game.cpp  Platform.cpp  Player.cpp
tmp/: compile_test.cpp
